[package]
edition = "2021"
name = "modio-modcheck"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive"] }
fs-err = "2.11.0"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
regex = "1.10.5"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "std",
    "registry",
] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
